--- a/packages/ui/src/components/buttons/button/button.styles.css
+++ b/packages/ui/src/components/buttons/button/button.styles.css
@@ -13,27 +13,27 @@
   display: grid;
   font-size: var(--button-fontSize);
   height: var(--button-height);
-  padding-inline: var(--button-paddingX);
+  padding-inline: calc(var(--forms-paddingX) * 2);
   text-underline-offset: 0.125rem;
   transition: all var(--button-transition) ease-in-out;
 
   /** Sizes */
   &:where([size="sm"]) {
-    --button-fontSize: var(--button-size-sm-fontSize);
-    --button-height: var(--button-size-sm-height);
-    --button-paddingX: var(--button-size-sm-paddingX);
+    --button-fontSize: var(--forms-size-sm-fontSize);
+    --button-height: var(--forms-size-sm-height);
+    --button-paddingX: var(--forms-size-sm-paddingX);
   }
 
   &:where([size="md"]) {
-    --button-fontSize: var(--button-size-md-fontSize);
-    --button-height: var(--button-size-md-height);
-    --button-paddingX: var(--button-size-md-paddingX);
+    --button-fontSize: var(--forms-size-md-fontSize);
+    --button-height: var(--forms-size-md-height);
+    --button-paddingX: var(--forms-size-md-paddingX);
   }
 
   &:where([size="lg"]) {
-    --button-fontSize: var(--button-size-lg-fontSize);
-    --button-height: var(--button-size-lg-height);
-    --button-paddingX: var(--button-size-lg-paddingX);
+    --button-fontSize: var(--forms-size-lg-fontSize);
+    --button-height: var(--forms-size-lg-height);
+    --button-paddingX: var(--forms-size-lg-paddingX);
   }
 
   /** Variants */
