--- a/packages/ui/src/components/forms/select/select.styles.css
+++ b/packages/ui/src/components/forms/select/select.styles.css
@@ -1,8 +1,18 @@
 [uiid="select"] {
   appearance: none;
-  padding-inline-end: calc(var(--formfield-paddingX) + 12px) !important;
+  max-height: calc(var(--forms-height) - 2px);
+  margin-inline-end: var(--forms-paddingX);
+  padding-inline-end: calc(var(--forms-paddingX) * 2 + 12px);
 
   &:has(option:disabled:checked) {
     color: var(--shade-accent);
+  }
+
+  & + [data-slot="formfield-bookend"]:has([data-slot="select-chevron"]) {
+    height: 100%;
+    padding-inline-start: var(--forms-paddingX);
+    pointer-events: none;
+    position: absolute;
+    right: 0;
   }
 }
