--- a/packages/ui/src/components/indicators/avatar/avatar.styles.css
+++ b/packages/ui/src/components/indicators/avatar/avatar.styles.css
@@ -5,8 +5,8 @@
 [data-slot="avatar-layers"] {
   text-align: center;
   background-color: var(--shade-foreground);
-  border-radius: 0.5rem;
-  padding-inline: 0.25rem;
+  border-radius: var(--forms-border-radius);
+  padding-inline: 0.5rem;
   height: 2rem;
   min-width: 2rem;
 }
@@ -18,7 +18,6 @@
 }
 
 [data-slot="avatar-image"] {
-  /* aspect-ratio: 1; */
   display: inline-block;
 }
 
