--- a/packages/ui/src/components/indicators/badge/badge.styles.css
+++ b/packages/ui/src/components/indicators/badge/badge.styles.css
@@ -1,11 +1,36 @@
+@import "@uiid/tokens/components/badge.tokens.css";
+
 [uiid="badge"] {
   background-color: var(--shade-foreground);
+  border: var(--badge-border-width) solid var(--badge-border-color);
+  border-radius: var(--badge-border-radius);
   color: var(--shade-background);
-  padding-inline: 1rem;
-  padding-block: 0.125rem;
-  border-radius: 0.325rem;
+  display: flex;
+  font-size: var(--badge-size-fontSize);
+  height: var(--badge-size-height);
+  padding-inline: var(--badge-size-paddingX);
+  place-items: center;
+
+  &:where([data-size="sm"]) {
+    --badge-size-height: var(--badge-size-sm-height);
+    --badge-size-fontSize: var(--badge-size-sm-fontSize);
+    --badge-size-paddingX: var(--badge-size-sm-paddingX);
+  }
+
+  &:where([data-size="md"]) {
+    --badge-size-height: var(--badge-size-md-height);
+    --badge-size-fontSize: var(--badge-size-md-fontSize);
+    --badge-size-paddingX: var(--badge-size-md-paddingX);
+  }
+
+  &:where([data-size="lg"]) {
+    --badge-size-height: var(--badge-size-lg-height);
+    --badge-size-fontSize: var(--badge-size-lg-fontSize);
+    --badge-size-paddingX: var(--badge-size-lg-paddingX);
+  }
 }
 
 [data-slot="badge-text"] {
   font-weight: 600;
+  text-wrap: nowrap;
 }
