feat: begin error message hookup

--- a/packages/ui/src/components/forms/formfield/subcomponents/formfield-description.css
+++ b/packages/ui/src/components/forms/formfield/subcomponents/formfield-description.css
@@ -2,4 +2,8 @@
   font-size: var(--input-description-fontSize);
   font-weight: var(--input-description-fontWeight);
   color: var(--input-description-color);
+
+  &[data-error="true"] {
+    color: var(--forms-state-invalid-color);
+  }
 }
