--- a/packages/ui/src/components/forms/styles.css
+++ b/packages/ui/src/components/forms/styles.css
@@ -52,8 +52,7 @@
 
 /* Input, Slots container */
 [uiid="input"],
-[uiid="textarea"],
-[data-slot="formfield-slots"] {
+[uiid="textarea"] [data-slot="formfield-slots"] {
   background-color: var(--forms-background);
   border: var(--forms-border-width) solid var(--forms-border-color);
   border-radius: var(--forms-border-radius);
