--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -1,3 +1,4 @@
+@import "./css/primitives/globals.tokens.css";
 @import "./css/primitives/colors.tokens.css";
 @import "./css/primitives/spacing.tokens.css";
 @import "./css/components/forms.tokens.css";
