--- a/packages/ui/src/components/overlays/modal/modal.module.css
+++ b/packages/ui/src/components/overlays/modal/modal.module.css
@@ -44,7 +44,7 @@
   &[data-starting-style],
   &[data-ending-style] {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.9);
+    transform: translate(-50%, -50%) scale(var(--globals-transform-scale));
   }
 }
 
