--- a/packages/ui/src/components/overlays/popover/popover.module.css
+++ b/packages/ui/src/components/overlays/popover/popover.module.css
@@ -1,10 +1,4 @@
 .popover-popup {
-  padding-inline: var(--globals-padding-x);
-  padding-block: var(--globals-padding-y);
-  border-radius: var(--globals-border-radius);
-  border: var(--globals-border-width) solid var(--globals-border-color);
-  background-color: var(--shade-surface);
-  color: var(--shade-foreground);
   transform-origin: var(--transform-origin);
   transition:
     transform var(--globals-transition-timing),
@@ -15,8 +9,8 @@
     opacity: 0;
     transform: scale(var(--globals-transition-scale));
   }
-}
 
-.popover-description {
-  color: var(--shade-accent);
+  &[data-instant] {
+    transition-duration: 0ms;
+  }
 }
