--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -90,3 +90,20 @@ body {
   margin: 0;
   padding: 0;
 }
+
+[data-is-popup="true"] {
+  transform-origin: var(--globals-transform-origin);
+  transition:
+    transform var(--globals-transition-timing),
+    opacity var(--globals-transition-timing);
+
+  &[data-starting-style],
+  &[data-ending-style] {
+    opacity: 0;
+    transform: scale(var(--globals-transform-scale));
+  }
+
+  &[data-instant] {
+    transition-duration: 0ms;
+  }
+}
