--- a/packages/ui/src/components/overlays/modal/modal.module.css
+++ b/packages/ui/src/components/overlays/modal/modal.module.css
@@ -2,17 +2,13 @@
   position: fixed;
   min-height: 100dvh;
   inset: 0;
-  background-color: black;
+  background-color: var(--shade-background);
   opacity: 0.2;
-  transition: opacity 150ms cubic-bezier(0.45, 1.005, 0, 1.005);
+  transition: opacity var(--globals-transition-timing) cubic-bezier(0.45, 1.005, 0, 1.005);
 
   /* iOS 26+: Ensure the backdrop covers the entire visible viewport. */
   @supports (-webkit-touch-callout: none) {
     position: absolute;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    opacity: 0.7;
   }
 
   &[data-starting-style],
@@ -22,46 +18,21 @@
 }
 
 .modal-popup {
-  box-sizing: border-box;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  display: flex;
-  flex-direction: column;
+  transition: all var(--globals-transition-timing);
 
   width: 24rem;
   max-width: calc(100vw - 3rem);
   margin-top: -2rem;
-  padding: 1.5rem;
-
-  border-radius: 0.5rem;
-  outline: 1px solid var(--shade-muted);
-  background-color: var(--shade-surface);
-  transition: all 150ms;
 
   &[data-starting-style],
   &[data-ending-style] {
     opacity: 0;
     transform: translate(-50%, -50%) scale(var(--globals-transform-scale));
   }
-}
-
-.modal-title {
-  margin-top: -0.375rem;
-  margin-bottom: 0.25rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  letter-spacing: -0.0025em;
-  font-weight: 500;
-}
-
-.modal-description {
-  margin: 0 0 1.5rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  color: var(--color-gray-600);
 }
 
 .modal-close {
