--- a/packages/cards/src/card/card.module.css
+++ b/packages/cards/src/card/card.module.css
@@ -18,8 +18,8 @@
     padding-inline: var(--globals-padding-x);
   }
   &:where([data-size="lg"]) {
-    padding-block: calc(var(--globals-padding-y) * 1.5);
-    padding-inline: calc(var(--globals-padding-x) * 1.5);
+    padding-block: calc(var(--globals-padding-y) * 1.25);
+    padding-inline: var(--globals-padding-x);
   }
 
   &:where([data-variant="info"]) {
