refactor: use card for popover

--- a/packages/overlays/src/popover/popover.module.css
+++ b/packages/overlays/src/popover/popover.module.css
@@ -1,4 +1,5 @@
 .popover-popup {
+  max-width: 360px;
   transform-origin: var(--transform-origin);
   transition:
     transform var(--globals-transition-timing),
